<resources>
    <string name="app_name">HotelAfisha</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="login">Логин</string>
    <string name="parol">Пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="txt1">У меня нет аккаунта…</string>
    <string name="enter">Войти</string>
</resources>