<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hotelafisha.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hotelafisha.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/dashboard_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hotelafisha.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/accauntIsActiveFragment"
        android:name="com.example.hotelafisha.ui.registration.AccauntIsActiveFragment"
        android:label="fragment_accaunt_is_active"
        tools:layout="@layout/fragment_accaunt_is_active" />
    <fragment
        android:id="@+id/forgotMyPasswordFragment"
        android:name="com.example.hotelafisha.ui.registration.ForgotMyPasswordFragment"
        android:label="fragment_forgot_my_password"
        tools:layout="@layout/fragment_forgot_my_password" />
    <fragment
        android:id="@+id/languageSelectionFragment"
        android:name="com.example.hotelafisha.ui.registration.LanguageSelectionFragment"
        android:label="fragment_language_selection"
        tools:layout="@layout/fragment_language_selection" />
    <fragment
        android:id="@+id/newPasswordFragment"
        android:name="com.example.hotelafisha.ui.registration.NewPasswordFragment"
        android:label="fragment_new_password"
        tools:layout="@layout/fragment_new_password" />
    <fragment
        android:id="@+id/registrationProfileFragment"
        android:name="com.example.hotelafisha.ui.registration.RegistrationProfileFragment"
        android:label="fragment_registration_profile"
        tools:layout="@layout/fragment_registration_profile" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.hotelafisha.ui.registration.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />
</navigation>