<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationProfileFragment">

    <TextView
        android:fontFamily="@font/inter"
        android:id="@+id/reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:text="@string/registration"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:textStyle="bold"
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        android:layout_marginTop="22dp"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:hint="Введите имя"
        android:textSize="14sp"
        android:autofillHints="Введите логин"
        android:background="@drawable/button_backgraund"
        android:cursorVisible="true"
        android:inputType="textPersonName"
        android:paddingStart="16sp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        tools:ignore="LabelFor" />

    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Введите логин"
        android:background="@drawable/button_backgraund"
        android:cursorVisible="true"
        android:inputType="textPersonName"
        android:text="Введите пароль"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_login"
         />

    <TextView
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/parol"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_login" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_backgraund"
        android:cursorVisible="true"
        android:hint="Введите пароль"
        android:paddingStart="16sp"
        android:textSize="14sp"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password"
        tools:ignore="LabelFor" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/reg_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/phone_number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_phone_number"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_backgraund"
        android:cursorVisible="true"
        android:hint="Введите номер телефона"
        android:inputType="textPersonName"
        android:paddingStart="16sp"
        android:textColorHint="@color/hintColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_phone_number"
        app:layout_goneMarginStart="16sp"
        tools:ignore="LabelFor" />
    <Button

        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_button_color"
        android:text="@string/registration"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24sp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>